--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
   <script src="./script.js" defer></script>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <h1>Rock Paper Scissors</h1>
   <button id="Rock">Rock</button>
   <button id="Paper">Paper</button>
   <button id="Scissors">Scissors</button>
+  <br><br>
+  <div class="holder">
+    <div id="out"></div>
+    <div id="score"></div>
+  </div>
+  <div id="winner"></div>
 </body>
 </html>
