--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
   <title>Rock Paper Scissors</title>
   <script src="./script.js" defer></script>
   <link rel="stylesheet" href="./style.css">
+  <script src="https://kit.fontawesome.com/ed98a6bd6b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>Rock Paper Scissors</h1>
-  <button id="Rock">Rock</button>
-  <button id="Paper">Paper</button>
-  <button id="Scissors">Scissors</button>
-  <br><br>
-  <div class="holder">
-    <div id="out"></div>
-    <div id="score"></div>
-  </div>
-  <div id="winner"></div>
+  <main>
+    <h1>Rock Paper Scissors</h1>
+    <button id="Rock" class="btn"><i class="fa-solid fa-hand-back-fist"></i> Rock</button>
+    <button id="Paper" class="btn"><i class="fa-solid fa-hand"></i> Paper</button>
+    <button id="Scissors" class="btn"><i class="fa-solid fa-hand-scissors"></i> Scissors</button>
+    <a href="."  class="btn"><i class="fa-solid fa-arrows-rotate"></i> Reset</a>
+    <br><br>
+    <div class="holder">
+      <div id="out"></div>
+      <div id="score"></div>
+    </div>
+    <div id="winner"></div>
+  </main>
 </body>
 </html>
